--- a/src/screens/Home/components/Cards/home-cards.css
+++ b/src/screens/Home/components/Cards/home-cards.css
@@ -7,6 +7,7 @@
 }
 .cards {
     margin-bottom: 24px;
+    text-align: center;
         position: relative;
         display: -webkit-box;
         display: -ms-flexbox;
