--- a/src/components/Layout/components/Header/components/Navbar/navbar.css
+++ b/src/components/Layout/components/Header/components/Navbar/navbar.css
@@ -1,5 +1,5 @@
  .navbar {
-    display: flex;
+    /* display: flex; */
      background-color: #001529;
       /* color:#fff; 
     height: 80px;   */
