--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -2,12 +2,12 @@
     display: flex;
   } */
   
-  .contenedor {
+  /* .contenedor {
     display: flex;
     flex-direction: column;
     flex: 1;
     min-height: 100vh;
-  } 
+  }  */
   .footer {
     background-color: #001529
   }
