--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -1,18 +1,21 @@
-.home-cards {
+.cards-container {
+    margin: 0;
     margin-top: 50px;
     margin-bottom: 50px;
     margin-right: 4%;
-    margin-left: 4%;
+    margin-left: 10%;
 
-}
+} 
 .cards {
+   /* width: 16.66666667;  */
     margin-top: 20px;
-    margin-bottom: 24px;
+     margin-bottom: 20px; 
     text-align: center;
-        position: relative;
+        /* position: relative; */
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
+       
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -37,4 +40,8 @@
     -o-transition:all .9s ease;
     -ms-transition:all .9s ease; 
 
+}
+
+h2 {
+    text-align: center;
 }
