--- a/src/components/Layout/components/Header/components/Navbar/navbar.css
+++ b/src/components/Layout/components/Header/components/Navbar/navbar.css
@@ -13,11 +13,11 @@
     width: 80px;
 }
 
-ul {
+/* ul {
     line-height: 64px;
     border-bottom: 0;
     color: rgba(255, 255, 255, 0.65);
-     /* background: #001529;  */
+      background: #001529;  
     white-space: nowrap;
     margin: 0;
     padding: 0;
@@ -27,7 +27,7 @@ ul {
      outline: none;
     transition: background 0.3s, width 0.2s;
     zoom: 1; 
-}
+} */
 
 .navbar-toggler {
     color:rgba(255, 255, 255, 0.65);
@@ -57,5 +57,5 @@ transition: width 0.7s ease, background-color 0.5s ease;
     background-color: #1890ff;
     border-radius: 5px;
     width: 100%;
-    padding: 15px;
+     padding: 15px; 
 } 
