--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -1,13 +1,11 @@
- /* .layout {
-    display: flex;
-  } */
-  
-  /* .contenedor {
+ 
+   .layout-main {
     display: flex;
     flex-direction: column;
-    flex: 1;
-    min-height: 100vh;
-  }  */
+     flex: 1; 
+    /* min-height: 100vh;  */
+  } 
+
   .footer {
     background-color: #001529
   }
