--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -39,9 +39,32 @@
     -moz-transition:all .9s ease; 
     -o-transition:all .9s ease;
     -ms-transition:all .9s ease; 
-
 }
 
 h2 {
     text-align: center;
+}
+
+   /* Portrait cel */
+   
+   @media (min-width: 320px) and (max-width: 480px) {
+  
+    .cards-container {
+        margin: 10px 55px;
+    
+  }
+}
+
+/* Landscape cel */
+
+@media (min-width: 640px) and (max-width: 360px) {
+  
+    .cards-container {
+        margin: 0;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-right: 4%;
+        margin-left: 13%;
+    
+  }
 }
