--- a/src/components/Layout/components/Header/components/Navbar/navbar.css
+++ b/src/components/Layout/components/Header/components/Navbar/navbar.css
@@ -37,6 +37,7 @@
     color:rgba(255, 255, 255, 0.65);
     line-height: 10px;
     margin-right: 1rem;
+    font-size: 20px;
 }
 
 .nav-item:after {
