--- a/src/screens/Home/components/Slider/slider.css
+++ b/src/screens/Home/components/Slider/slider.css
@@ -1,6 +1,7 @@
 .carousel-caption {
     background-color: #a7a7a7cf;
     opacity: .9;
+    font-size: 25px;
 }
 
 .slider{
@@ -8,3 +9,9 @@
     width: 100%;
     object-fit: cover;
     }
+
+.error-alert {
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+      }
