--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -1,20 +1,33 @@
-.cards-container {
-    margin: 0;
+ .cards-container {
+    /* margin: 0;
     margin-top: 50px;
     margin-bottom: 50px;
     margin-right: 4%;
-    margin-left: 10%;
+    margin-left: 10%; */
+   width: 100%;
+    /* position: relative;
+    height: auto;
+    margin-right: 0;
+    margin-left: 0;
+    zoom: 1;
+    display: block; */
 
-} 
+}   
 .cards {
    /* width: 16.66666667;  */
     margin-top: 20px;
      margin-bottom: 20px; 
+     font-size: 20px;
     text-align: center;
         /* position: relative; */
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
+        justify-content: center;
+        align-content: space-between;
+        /* white-space: nowrap; 
+        overflow: hidden;
+            text-overflow: ellipsis; */
        
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -24,9 +37,16 @@
         word-wrap: break-word;
         background-color: #fff;
         background-clip: border-box;
-        border: 1px solid #eef2f7;
+        /* border: 1px solid #eef2f7; */
         border-radius: .25rem;
-        background: linear-gradient(-45deg)
+        background: linear-gradient(-45deg);
+        overflow: hidden;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+    font-size: 16px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+        
 }
 .cards:hover {
     -webkit-transform:scale(1.1);
