--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -1,4 +1,10 @@
  
+.layout-main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
   .footer {
     background-color: #001529;
   }
